# the-cosmic-cafeteria

./: .gitignore  API_DOC.md  LICENSE.md  README-Implimentation.md  README.md  app.py  config.py  conftest.py  cosmic-cafe.postman_collection.json  docker-compose.yml  dump.rdb  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_unit_tests.sh  senario-text.md
.github/workflows/: unit-tests.yml
docker/: README.md
docker/api/: Dockerfile  entrypoint.sh
docker/worker/: Dockerfile
docs/: 01-intro.md  02-specs.md  index.md
jobs/: queue.py
migrations/versions/: 959a99d18006_initial_migration.py
src/api/: __init__.py  app.py  app_extensions.py  config.py  extensions.py  runner.py  utils.py
src/api/database/: __init__.py
src/api/models/: Hero.py  Meal.py  Order.py  __init__.py  hero.py  meal.py  order.py  order_status.py  order_worker.py  user.py
src/api/routes/: __init__.py  create_order.py  hero_route.py  hero_routes.py  meal_route.py  meal_routes.py  order_route.py  order_routes.py  user_pages.py  user_routes.py  user_routres.py
src/api/schemas/: __init__.py  hero_schema.py  meal_schema.py  order_schema.py
src/api/tasks/: order_tasks.py
src/api/templates/: user.html
src/api/views/: hero_view.py  meal_view.py  order_service.py  order_view.py  utils.py
src/app/: __init__.py  config.py  worker.py
src/cli/: __about__.py  __main__.py  app.py  commands.py
src/worker/: __init__.py  __main__.py  tasks.py
tests/: __init__.py  conftest.py  test_cli.py  test_order_service.py  test_order_tasks.py  test_worker_runner.py
tests/integration/: __init__.py  test_routes.py  test_workflows.py
tests/test_models/: test_hero.py  test_meal.py  test_order.py
tests/test_route/: test_hero_routes.py  test_meal_route.py  test_order_view.py
tests/test_schemas/: test_hero_schema.py  test_meal_schema.py  test_order_schema.py
tests/unit/: README.md  __init__.py  conftest.py  test_app_factory.py  test_cli_commands.py  test_meal_routes.py  test_models.py  test_order_routes.py  test_order_routes.py.new  test_routes.py  test_schemas.py  test_tasks.py  test_utils.py.new  test_worker_tasks.py  test_worker_tasks.py.new
